// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#CookiesConsent accept cookies 1`] = `""`;

exports[`#CookiesConsent render - cookies accepted 1`] = `""`;

exports[`#CookiesConsent render - cookies not accepted 1`] = `
<React.Fragment>
  <Banner
    onAccept={[Function]}
    onShowInfo={[Function]}
  />
</React.Fragment>
`;

exports[`#CookiesConsent showInfo / hideInfo 1`] = `
<React.Fragment>
  <Banner
    onAccept={[Function]}
    onShowInfo={[Function]}
  />
  <InfoModal
    onClose={[Function]}
  />
</React.Fragment>
`;

exports[`#CookiesConsent showInfo / hideInfo 2`] = `
<React.Fragment>
  <Banner
    onAccept={[Function]}
    onShowInfo={[Function]}
  />
</React.Fragment>
`;
